# sol

./: .gitignore  CMakeLists.txt  README.md
include/pluja/: arena.h  buffer.h  error.h  mem.h  types.h
include/pluja/lexer/: lexer.h  token.h
include/pluja/parser/: node.h  parser.h
include/sol/: arena.h  error.h  error.hpp  mem.h  types.h  types.hpp
include/sol/lexer/: Lexer.hpp  Token.hpp  lexer.h  token.h
include/sol/parser/: AstPrinter.hpp  Node.hpp  Parser.hpp  Visitor.hpp  node.h  parser.h
include/sol/parser/lexer/: Lexer.hpp  Token.hpp
include/sol/vm/: Environment.hpp  Interpreter.hpp  Value.hpp  vm.h
notes/: README.md  ROADMAP.md
sol/: sdisassemble.c  sgen.c  sgen.h  slexer.c  slexer.h  snode.h  sol.c  sparser.c  sparser.h  sprint_ast.c
sol/common/: arena.c  arena.h  error.c  error.h  hashmap.c  hashmap.h  string.c  string.h  types.h  vector.c  vector.h
src/: buffer.c  error.c  mem.c  pluja.c  sol.c  sol.cpp
src/lexer/: Lexer.cpp  lexer.c  token.c
src/parser/: AstPrinter.cpp  Node.cpp  Parser.cpp  node.c  parser.c  print.c
src/parser/lexer/: Lexer.cpp
src/vm/: Interpreter.cpp  natives.c  vm.c  vmhelpers.h  vmnatives.h
